--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
       <div class="container justify-content-center"> <!-- centralização dos atributos da nav -->
 
         <!-- Elemento do destaque no navbar -->
+        <a href="index.html">
           <div id="logo">
             <a class="logo" href="index.html">
               <img class="imgLogo" src="img/logo.svg" alt="logo">
             </a>
             <h1>Nosso<span>Site</span></h1>
-          </div> <!--#logo-->
+          </div>
+        </a> <!--#logo-->
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarsite"> <!-- botão para abrir quando o site for vizualizado em telas menores -->
           <span class="navbar-toggler-icon"></span> 
