adaptação para empresa

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
         <a href="index.html">
           <div id="logo">
             <a class="logo" href="index.html">
-              <img class="imgLogo" src="img/logo.svg" alt="logo">
+              <img class="imgLogo" src="img/logoHigh.png" alt="logo">
             </a>
-            <h1>Nosso<span>Site</span></h1>
           </div>
         </a> <!--#logo-->
 
